kustomize/base/patch-ingress-repository.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfresco-content-services-alfresco-cs-repository
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    kubernetes.io/ingress.class: default
    nginx.ingress.kubernetes.io/proxy-read-timeout: "200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "200"
spec:
  ingressClassName: default
